# fastapi-boilerplate

./: .env.example  LICENSE  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/core/database/: __init__.py  base.py  factory.py  postgres_adapter.py  sqlite_adapter.py
app/schemas/: item.py
app/services/: item_service.py
tests/: conftest.py  test_api.py
tests/unit/: test_item_service.py
