[tool.poetry]
name = "fastapi-boilerplate"
version = "1.0.0"
description = "A FastAPI boilerplate for REST APIs using relational DBs."
authors = ["Justin Largo <justinlargo7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.1"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.23.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]